ACLOCAL_AMFLAGS=-I m4
lib_LTLIBRARIES=libfastbit4java-1.0.la

libfastbit4java_1_0_la_SOURCES=FastbitPartition.cc FastbitTable.cc FastbitResultRow.cc FastbitCursor.cc FastbitPartition.h FastbitTable.h FastbitResultRow.h FastbitCursor.h FastbitTablex.h FastbitTablex.cc macros.h

libfastbit4java_1_0_la_LIBADD=@libfastbit@
AM_CXXFLAGS=@java_includes@ @fastbit_includes@
